Update e2e tests documentation with enabled local feature tar setup